[gd_scene load_steps=2 format=3 uid="uid://cgwi83k45on8g"]

[ext_resource type="Script" uid="uid://b2dvonwmu5nsh" path="res://scenes/ui/debug/scheduler_panel.gd" id="1_b6krh"]

[node name="SchedulerPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6krh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClockLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2

[node name="AgentIdEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "agent_id"
alignment = 1

[node name="SkillEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "guitar"
placeholder_text = "skill"
alignment = 1

[node name="StartInMinSpin" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
max_value = 1440.0
value = 60.0
prefix = "start in"
suffix = "min"

[node name="DurationSpin" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
max_value = 600.0
value = 60.0
prefix = "for"
suffix = "min"

[node name="ScheduleBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Plan Practice"

[node name="SchedGigBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Plan Gig"

[node name="TpToVenueBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Teleport to Venue"

[node name="UpcomingList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/ScheduleBtn" to="." method="_on_schedule_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/SchedGigBtn" to="." method="_on_sched_gig_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/TpToVenueBtn" to="." method="_on_tp_to_venue_btn_pressed"]
